# webprog_group_quiz

webprog_group_quiz/: .env  Cargo.toml  README.md  bugtrack.db  schema.sql
webprog_group_quiz/src/: auth.rs  auth_middleware.rs  db.rs  handlers.rs  main.rs  models.rs
webprog_group_quiz/templates/: bug_assign_form.html  close_project_form.html  login.html  register.html  update_bug.html
