[package]
name = "webprog_group_quiz"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
dotenvy = "0.15"
derive_more = "0.99"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
sha2 = "0.10"  
jsonwebtoken = "8.0"
actix-web-httpauth = "0.8"
serde_json = "1.0"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"